fix npm audit vulnerabilities

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gatsby-plugin-nprogress": "2.0.5",
     "gatsby-plugin-offline": "2.0.5",
     "gatsby-plugin-react-helmet": "3.0.0",
-    "gatsby-plugin-sharp": "2.0.5",
+    "gatsby-plugin-sharp": "^2.0.12",
     "gatsby-plugin-sitemap": "2.0.1",
     "gatsby-plugin-twitter": "2.0.5",
     "gatsby-remark-autolink-headers": "2.0.5",
@@ -29,8 +29,8 @@
     "moment": "^2.22.2",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
     "react-disqus-comments": "^1.1.1",
+    "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-share": "^2.0.0",
     "react-twitter-widgets": "^1.7.1",
